--- a/assets/sass/layout/base.scss
+++ b/assets/sass/layout/base.scss
@@ -1,6 +1,11 @@
 /**
  * Base
  */
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html {
   font-size: 10px;
 }
@@ -91,7 +96,7 @@ section {
 
 .social {
   clear: both;
-  margin-top: 2px;
+  margin-top: 4px;
 
   li {
     display: inline-block;
@@ -110,7 +115,7 @@ section {
     text-decoration: none;
     font-family: "BokBokIcons";
     line-height: 2.2rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
     vertical-align: middle;
 
     &:hover {
