--- a/assets/sass/layout/timeline.scss
+++ b/assets/sass/layout/timeline.scss
@@ -93,8 +93,7 @@
 @media only screen and (min-width: $query-tablet) {
   .timeline-container {
     margin-top: 60px;
-    z-index: -1;
-    margin-bottom: -20px;
+    margin-bottom: 0;
 
     li {
       width: 50%;
