--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -1,7 +1,7 @@
 /**
  * Fonts
  */
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700,900&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700');
 
 @font-face {
   font-family: BokBokIcons;
