--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -1,7 +1,7 @@
 /**
  * Fonts
  */
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700');
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700,900');
 
 @font-face {
   font-family: BokBokIcons;
@@ -19,3 +19,4 @@ $base-line-height: 2rem;
 
 $weight-regular: 400;
 $weight-bold: 700;
+$weight-black: 900;
