--- a/assets/sass/components/buttons.scss
+++ b/assets/sass/components/buttons.scss
@@ -7,10 +7,9 @@
     color: $color-white;
     display: block;
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     line-height: 4.8rem;
     font-weight: $weight-bold;
-    max-width: 328px;
     width: 100%;
     text-align: center;
     text-transform: uppercase;
@@ -67,6 +66,15 @@
 
     &:after {
         content: " >";
+    }
+}
+
+/**
+ * Custom
+ */
+@media only screen and (min-width: 400px) {
+    %button {
+        max-width: 328px;
     }
 }
 
