--- a/assets/sass/layout/article.scss
+++ b/assets/sass/layout/article.scss
@@ -41,10 +41,10 @@ article {
 .article-list {
     clear: both;
 
-    h3 {
-        font-size: 1.1rem;
-        line-height: 1.6rem;
-        font-family: $sans-font-family;
+    h4 {
+        //font-size: 1.1rem;
+        //line-height: 1.6rem;
+        //font-family: $sans-font-family;
 
         a {
             text-decoration: none;
@@ -53,7 +53,7 @@ article {
     }
 
     .article-intro {
-        @extend .text-small;
+        //@extend .text-small;
     }
 
     li:not(:first-child):before {
