--- a/assets/sass/layout/footer.scss
+++ b/assets/sass/layout/footer.scss
@@ -15,6 +15,8 @@ footer {
     position: relative;
     padding-top: 32px;
     box-sizing: border-box;
+    width: 100%;
+    margin-left: -50%;
 
     &:before {
         content: "";
