owl carousel, h2 before fix

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -18,3 +18,7 @@
 @import "layout/blockquote";
 @import "layout/article";
 @import "layout/footer";
+
+/* Packages */
+@import "owl/owl.carousel";
+@import "owl/owl.theme.default";
