--- a/assets/sass/layout/article.scss
+++ b/assets/sass/layout/article.scss
@@ -35,6 +35,11 @@ article {
 
     .article-intro {
         margin: 16px 0;
+        overflow: hidden;
+        height: 7.2rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 }
 
@@ -80,6 +85,14 @@ article {
             width: 25%;
         }
     }
+
+    article {
+        .article-intro {
+            -webkit-line-clamp: unset;
+            height: auto;
+
+        }
+    }
 }
 
 /**
@@ -95,7 +108,6 @@ article {
 
     .article-wrapper {
         display: flex;
-        align-items: center;
         margin: 50px 0;
     }
 
